# briefcase

./: .ghci  .gitignore  LICENCE  briefcase.cabal  package.yaml  stack.yaml
lib/Briefcase/: CashFlow.hs  Money.hs  TimeValue.hs  TimeValueOfMoney.hs  Utilities.hs
tests/: CheckProgram.hs
