cabal-version:       >= 1.24
name:                briefcase
version:             0.1.1
synopsis:            Utilities for assessing value of projects
license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2017 Operational Dynamics Consulting Pty Ltd, and Others
category:            Text
tested-with:         GHC == 8.0

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base,
                     text,
                     formatting

  hs-source-dirs:    lib

  exposed-modules:   Briefcase.TimeValueOfMoney
                     Briefcase.Utilities

  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           check
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

  build-depends:     base,
                     HUnit,
                     hspec,
                     briefcase

  hs-source-dirs:    tests
  main-is:           CheckProgram.hs
                      
  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs

-- vim: set tabstop=21 expandtab:
